package obiba.mica;
option java_package = "org.obiba.mica.web.model";

message SessionDto {
  required string username = 1;
  repeated string roles = 2;
}

message StudySummaryDto {
  required string id = 1;
  optional TimestampsDto timestamps = 2;
  repeated LocalizedStringDto name = 3;
  repeated LocalizedStringDto acronym = 4;
  repeated string designs = 5;
  optional TargetNumberDto targetNumber = 6;
  repeated string countries = 7;
  optional AttachmentDto logo = 8;
  repeated LocalizedStringDto objectives = 9;
  repeated string dataSources = 10;
  repeated PopulationSummaryDto populationSummaries = 11;
  required bool published = 12;
  optional int64 variables = 13;
  extensions 1000 to max;
}

message PopulationSummaryDto {
  required string id = 1;
  repeated LocalizedStringDto name = 2;
  repeated DataCollectionEventSummaryDto dataCollectionEventSummaries = 3;
}

message DataCollectionEventSummaryDto {
  required string id = 1;
  repeated LocalizedStringDto name = 2;
}

message StudySummariesDto {
  required int32 total = 1;
  required int32 from = 2;
  required int32 limit = 3;
  repeated StudySummaryDto studySummaries = 4;
}

message StudyStateDto {
  optional string publishedTag = 1;
  required int32 revisionsAhead = 2;

  extend StudySummaryDto {
    optional StudyStateDto state = 1000;
  }
}

message StudyDto {
  optional string id = 1;
  optional TimestampsDto timestamps = 2;

  repeated LocalizedStringDto name = 3;
  repeated LocalizedStringDto acronym = 4;
  optional AttachmentDto logo = 5;
  repeated ContactDto investigators = 6;
  repeated ContactDto contacts = 7;
  repeated LocalizedStringDto objectives = 8;
  optional string website = 9;
  optional AuthorizationDto specificAuthorization = 10;
  optional AuthorizationDto maelstromAuthorization = 11;
  optional StudyMethodsDto methods = 12;
  optional NumberOfParticipantsDto numberOfParticipants = 13;
  optional int32 startYear = 14;
  optional int32 endYear = 15;
  repeated string access = 16;
  repeated LocalizedStringDto otherAccess = 17;
  optional string markerPaper = 18;
  optional string pubmedId = 19;
  repeated AttachmentDto attachments = 20;
  repeated LocalizedStringDto info = 21;
  repeated PopulationDto populations = 22;
  repeated AttributeDto attributes = 24;
  optional string opal = 25;
  optional string opalUsername = 26;
  optional string opalPassword = 27;

  message StudyMethodsDto {
    repeated string designs = 1;
    repeated LocalizedStringDto otherDesign = 2;
    repeated LocalizedStringDto followUpInfo = 3;
    repeated string recruitments = 4;
    repeated LocalizedStringDto otherRecruitment = 5;
    repeated LocalizedStringDto info = 6;
  }

  message NumberOfParticipantsDto {
    optional TargetNumberDto participant = 1;
    optional TargetNumberDto sample = 2;
    repeated LocalizedStringDto info = 3;
  }

  message PopulationDto {
    optional string id = 1;
    repeated LocalizedStringDto name = 2;
    repeated LocalizedStringDto description = 3;
    optional RecruitmentDto recruitment = 4;
    optional SelectionCriteriaDto selectionCriteria = 5;
    optional NumberOfParticipantsDto numberOfParticipants = 6;
    repeated LocalizedStringDto info = 7;
    repeated DataCollectionEventDto dataCollectionEvents = 8;
    repeated AttributeDto attributes = 9;

    message RecruitmentDto {
      repeated string dataSources = 1;
      repeated string generalPopulationSources = 2;
      repeated string specificPopulationSources = 3;
      repeated LocalizedStringDto otherSpecificPopulationSource = 4;
      repeated LocalizedStringDtos studies = 5;
      repeated LocalizedStringDto otherSource = 6;
      repeated LocalizedStringDto info = 7;
    }

    message SelectionCriteriaDto {
      enum Gender {
        men = 0;
        women = 1;
      }
      optional Gender gender = 1;
      optional double ageMin = 2;
      optional double ageMax = 3;
      repeated string countriesIso = 4;
      repeated LocalizedStringDto territory = 5;
      repeated string criteria = 6;
      repeated LocalizedStringDtos ethnicOrigin = 7;
      repeated LocalizedStringDtos healthStatus = 8;
      repeated LocalizedStringDto otherCriteria = 9;
      repeated LocalizedStringDto info = 10;
    }

    message DataCollectionEventDto {
      optional string id = 1;
      repeated LocalizedStringDto name = 2;
      repeated LocalizedStringDto description = 3;
      required int32 startYear = 4;
      optional int32 startMonth = 5;
      optional int32 endYear = 6;
      optional int32 endMonth = 7;
      repeated string dataSources = 8;
      repeated string administrativeDatabases = 9;
      repeated LocalizedStringDto otherDataSources = 10;
      repeated string bioSamples = 11;
      repeated LocalizedStringDto tissueTypes = 12;
      repeated LocalizedStringDto otherBioSamples = 13;
      repeated AttachmentDto attachments = 14;
      repeated AttributeDto attributes = 15;
    }
  }
}

enum OpalCredentialType {
  USERNAME = 0;
  PUBLIC_KEY_CERTIFICATE = 1;
}

message OpalCredentialDto {
  required OpalCredentialType type = 1;
  required string opalUrl = 2;
  optional string username = 3;
  optional string password = 4;
  optional KeyForm keyForm = 5;
}

enum KeyType {
  KEY_PAIR = 0;
  CERTIFICATE = 1;
}

message KeyDto {
  required string alias = 1;
  required string certificate = 2;
  required KeyType keyType = 3;
}

message KeyForm {
  optional string alias = 1;
  optional PrivateKeyForm privateForm = 2;
  optional string privateImport = 3;

  optional PublicKeyForm publicForm = 4;
  optional string publicImport = 5;
  optional string certificateFile = 6;

  required KeyType keyType = 7;
}

message PrivateKeyForm {
  required string algo = 1;
  required int32 size = 2;
}

message PublicKeyForm {
  required string name = 1;
  required string organizationalUnit = 2;
  required string organization = 3;
  required string locality = 4;
  required string state = 5;
  required string country = 6;
}

message DocumentDigestDto {
  required string id = 1;
  repeated LocalizedStringDto name = 2;
  extensions 1000 to max;
}

message NetworkDigestDto {
  repeated string ids = 1;

  extend DocumentDigestDto {
    optional NetworkDigestDto studies = 1000;
  }
}

message NetworkDto {
  optional string id = 1;
  optional TimestampsDto timestamps = 2;
  repeated LocalizedStringDto name = 3;
  repeated LocalizedStringDto acronym = 4;
  repeated ContactDto investigators = 5;
  repeated ContactDto contacts = 6;
  repeated LocalizedStringDto description = 7;
  optional string website = 8;
  optional AuthorizationDto maelstromAuthorization = 9;
  repeated AttachmentDto attachments = 10;
  repeated LocalizedStringDto info = 11;
  repeated string studyIds = 12;
  repeated StudySummaryDto studySummaries = 13;
  required bool published = 14;
  optional AttachmentDto logo = 15;
  extensions 1000 to max;
}

message NetworksDto {
  required int32 total = 1;
  required int32 from = 2;
  required int32 limit = 3;
  repeated NetworkDto networks = 4;
}

message TimestampsDto {
  optional string created = 1;
  optional string lastUpdate = 2;
}

message CountryDto {
  required string iso = 1;
  repeated LocalizedStringDto name = 2;
}

message TargetNumberDto {
  optional bool noLimit = 1;
  optional int32 number = 2;
}

message LocalizedStringDto {
  required string lang = 1;
  optional string value = 2;
}

message LocalizedStringDtos {
  repeated LocalizedStringDto localizedStrings = 1;
}

message ContactDto {
  optional string title = 1;
  optional string firstName = 2;
  required string lastName = 3;
  optional string academicLevel = 4;
  optional string email = 5;
  optional string phone = 6;
  optional bool dataAccessCommitteeMember = 7;
  optional InstitutionDto institution = 8;
  message InstitutionDto {
    repeated LocalizedStringDto name = 1;
    repeated LocalizedStringDto department = 2;
    optional AddressDto address = 3;
  }
}

message AuthorizationDto {
  optional bool authorized = 1;
  optional string authorizer = 2;
  optional string date = 3;
}

message AddressDto {
  repeated LocalizedStringDto street = 1;
  repeated LocalizedStringDto city = 2;
  optional string zip = 3;
  optional string state = 4;
  optional CountryDto country = 5;
}

message AttachmentDto {
  required string id = 1;
  required string fileName = 2;
  optional string type = 3;
  repeated LocalizedStringDto description = 4;
  optional string lang = 5;
  optional int64 size = 6;
  optional string md5 = 7;
  optional bool justUploaded = 8;
}

message TempFileDto {
  required string id = 1;
  required string name = 2;
  optional int64 size = 3;
  optional string md5 = 4;
}

message MicaConfigDto {
  required string name = 1;
  repeated string languages = 2;
  required string defaultCharSet = 3;
  optional string publicUrl = 4;
  required string opal = 5;
}

message AggregationsConfigDto {
  repeated AggregationInfoDto study = 1;
  repeated AggregationInfoDto variable = 2;
}

message AggregationInfoDto {
  required string id = 1;
  repeated LocalizedStringDto title = 2;
}

message AttributeDto {
  optional string namespace = 1;
  required string name = 2;
  repeated LocalizedStringDto values = 3;
}

message TaxonomyEntityDto {
  required string name = 1;
  repeated LocalizedStringDto titles = 2;
  repeated LocalizedStringDto descriptions = 3;
}

message TermAttributeDto {
  required TaxonomyEntityDto vocabulary = 1;
  repeated TaxonomyEntityDto terms = 2;
}

message TermAttributesDto {
  required TaxonomyEntityDto taxonomy = 1;
  repeated TermAttributeDto vocabularyTerms = 2;
}

message DatasetDto {
  optional string id = 1;
  repeated LocalizedStringDto name = 2;
  repeated LocalizedStringDto acronym = 3;
  repeated LocalizedStringDto description = 4;
  required string entityType = 5;
  required bool published = 6;
  repeated AttributeDto attributes = 7;

  extensions 1000 to max;

  message StudyTableDto {
    required string studyId = 1;
    required string populationId = 2;
    required string dataCollectionEventId = 3;
    required string project = 4;
    required string table = 5;
    optional string dceId = 6;
    repeated LocalizedStringDto name = 7;
    repeated LocalizedStringDto description = 8;
    optional StudySummaryDto studySummary = 9;
  }
}

message StudyDatasetDto {
  required DatasetDto.StudyTableDto studyTable = 1;

  extend DatasetDto {
    optional StudyDatasetDto type = 1000;
  }
}

message HarmonizationDatasetDto {
  required string project = 1;
  required string table = 2;
  repeated DatasetDto.StudyTableDto studyTables = 3;

  extend DatasetDto {
    optional HarmonizationDatasetDto type = 1001;
  }
}

message DatasetsDto {
  required int32 total = 1;
  required int32 from = 2;
  required int32 limit = 3;
  repeated DatasetDto datasets = 4;
}

message DatasetCategoryDto {
  required string name = 1;
  required bool missing = 2;
  repeated AttributeDto attributes = 3;
}

message DatasetVariableDto {
  required string id = 1;
  required string datasetId = 2;
  repeated string studyIds = 3;
  required string variableType = 4;
  required string name = 5;
  required string entityType = 6;
  required string valueType = 7;
  optional string mimeType = 8;
  required bool repeatable = 9;
  optional string occurrenceGroup = 10;
  optional string unit = 11;
  optional string referencedEntityType = 12;
  required string nature = 13;
  required int32 index = 14;
  repeated AttributeDto attributes = 15;
  repeated DatasetCategoryDto categories = 16;
  repeated LocalizedStringDto datasetName = 17;
  repeated StudySummaryDto studySummaries = 18;
  repeated TermAttributesDto termAttributes = 19;
}

message DatasetVariablesDto {
  required int32 total = 1;
  required int32 from = 2;
  required int32 limit = 3;
  repeated DatasetVariableDto variables = 4;
}

message DatasetVariableResolverDto {
  required string id = 1;
  required string datasetId = 2;
  required string name = 3;
  required string variableType = 4;
  optional string studyId = 5;
  optional string project = 6;
  optional string table = 7;
  repeated LocalizedStringDto datasetName = 8;
  repeated LocalizedStringDto datasetAcronym = 9;
  repeated LocalizedStringDto variableLabel = 10;
  repeated LocalizedStringDto studyName = 11;
  repeated LocalizedStringDto studyAcronym = 12;
}

message DatasetVariableSummaryDto {
  required DatasetVariableResolverDto resolver = 1;
  repeated AttributeDto attributes = 2;
  optional DatasetDto.StudyTableDto studyTable = 3;
}

message DatasetVariableHarmonizationDto {
  required DatasetVariableResolverDto resolver = 1;
  repeated DatasetVariableSummaryDto datasetVariableSummaries = 2;
}

message DatasetVariablesHarmonizationsDto {
  required int32 total = 1;
  required int32 from = 2;
  required int32 limit = 3;
  repeated DatasetVariableHarmonizationDto variableHarmonizations = 4;
}

message DatasetVariableAggregationDto {
  message FrequencyDto {
    required string value = 1;
    required int32 count = 2;
    required bool missing = 3;
  }
  message StatisticsDto {
    optional float sum = 1;
    optional float min = 2;
    optional float max = 3;
    optional float mean = 4;
    optional float sumOfSquares = 5;
    optional float variance = 6;
    optional float stdDeviation = 7;
  }
  required DatasetDto.StudyTableDto studyTable = 1;
  required int32 total = 2;
  required int32 n = 3;
  repeated FrequencyDto frequencies = 4;
  optional StatisticsDto statistics = 5;
}

message DatasetVariableAggregationsDto {
  repeated DatasetVariableAggregationDto aggregations = 1;
  required int32 total = 2;
  required int32 n = 3;
  repeated DatasetVariableAggregationDto.FrequencyDto frequencies = 4;
  optional DatasetVariableAggregationDto.StatisticsDto statistics = 5;
}

message CommentDto {
  optional string id = 1;
  required string message = 3;
  required string resourceId = 4;
  required string instanceId = 5;
  required string createdBy = 6;
  optional string modifiedBy = 7;
  required TimestampsDto timestamps = 8;
  repeated string actions = 9;
  optional UserProfileDto createdByProfile = 10;
  optional UserProfileDto modifiedByProfile = 11;
}

message DataAccessRequestDto {

  message StatusChangeDto {
    required string from = 1;
    required string to = 2;
    required string author = 3;
    required string changedOn = 4;
    optional UserProfileDto profile = 5;
  }

  optional string id = 1;
  optional TimestampsDto timestamps = 2;
  required string applicant = 3;
  required string status = 4 [default = "OPENED"];
  optional string title = 5;
  optional string content = 6;
  repeated AttachmentDto attachments = 7;
  repeated string actions = 8;
  repeated string nextStatus = 9;
  repeated StatusChangeDto statusChangeHistory = 10;
  optional UserProfileDto profile = 11;
}

message DataAccessFormDto {
  message LocalizedPropertyDto {
    required string name = 1;
    repeated LocalizedStringDto value = 2;
  }

  required string schema = 1;
  required string definition = 2;
  repeated AttachmentDto pdfTemplates = 3;
  repeated LocalizedPropertyDto properties = 4;
  optional string titleFieldPath = 5;
  optional string idPrefix = 6;
  required int32 idLength = 7;
}

message UserProfileDto {
  message AttributeDto {
    required string key = 1;
    optional string value = 2;
  }
  required string username = 1;
  repeated string groups = 2;
  repeated AttributeDto attributes = 3;
}

